<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="indicator"
            type="com.prueba.misindicadores.data.model.Indicator" />
        <variable
            name="dateFormat"
            type="java.text.DateFormat" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:context=".ui.indicators.IndicatorDetailsFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/indicator_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indicator_code_label"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{indicator.codigo}"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="@id/indicator_code_label"
                app:layout_constraintBottom_toBottomOf="@id/indicator_code_label"
                app:layout_constraintStart_toEndOf="@id/indicator_code_label"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/indicator_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indicator_name_label"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/indicator_code_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{indicator.nombre}"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="@id/indicator_name_label"
                app:layout_constraintBottom_toBottomOf="@id/indicator_name_label"
                app:layout_constraintStart_toEndOf="@id/indicator_name_label"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/indicator_unit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indicator_unit_label"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/indicator_name_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{indicator.unidad_medida}"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="@id/indicator_unit_label"
                app:layout_constraintBottom_toBottomOf="@id/indicator_unit_label"
                app:layout_constraintStart_toEndOf="@id/indicator_unit_label"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/indicator_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indicator_date_label"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/indicator_unit_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text='@{indicator.fecha != null ? dateFormat.format(indicator.fecha) : ""}'
                app:layout_constraintTop_toTopOf="@id/indicator_date_label"
                app:layout_constraintBottom_toBottomOf="@id/indicator_date_label"
                app:layout_constraintStart_toEndOf="@id/indicator_date_label"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/indicator_value_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indicator_value_label"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/indicator_date_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{String.format("%.2f", indicator.valor)}'
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="@id/indicator_value_label"
                app:layout_constraintBottom_toBottomOf="@id/indicator_value_label"
                app:layout_constraintStart_toEndOf="@id/indicator_value_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>